# 4Gewinnt

./: CMakeLists.txt  CmdInputPlayer.cpp  CmdInputPlayer.h  GameMachine.cpp  GameMachine.h  Move.cpp  Move.h  MoveStorage.cpp  MoveStorage.h  NNPlayer.cpp  NNPlayer.h  Player.cpp  Player.h  PlayingField.cpp  PlayingField.h  RandomPlayer.cpp  RandomPlayer.h  main.cpp  storage.txt
Player/: CmdInputPlayer.cpp  CmdInputPlayer.h  NeuralNetworkPlayer.cpp  NeuralNetworkPlayer.h  Player.cpp  Player.h  RandomPlayer.cpp  RandomPlayer.h
neuralNetwork/: Helper.cpp  Helper.h  NeuralNetwork.cpp  NeuralNetwork.h
